# mat-fact-parallel

./: .gitignore  README.md
cuda/: CMakeLists.txt  matFact.cu  matFact.cuh  updateLR.cu  updateLR.cuh
cuda/src/: computeB.h  filterFinalMatrix.cpp  filterFinalMatrix.h  initialLR.h  matFact.cu  matFact.cuh  readInput.h  serial.cpp  updateLR.cuh
cuda_example/: CMakeLists.txt
cuda_example/src/: .updateLR.cu.swp  CMakeLists.txt  matFact.cu  matFact.cuh  updateLR.cu  updateLR.cuh
cuda_example/tests/: instances.cpp
instances/: inst2.in
omp/: matrixFacOmp_v1.c
omp/src/: matFact.cpp
serial/: matrixFacSerial_v1.c
serial/src/: matFact.cpp
